fixed navbar collapse and search styling

--- a/angular-frontend/src/app/components/navbar/navbar.component.css
+++ b/angular-frontend/src/app/components/navbar/navbar.component.css
@@ -1,13 +1,19 @@
 .nav-container{
   background-color: #fff8f8;
-  width: 100vw;
-  height: 8vh;
+  width: 100vw !important;
+  height: fit-content;
   border: 0px #d6c2c5 solid;
   border-bottom-width: 1px;
   display: flex;
   align-items: center;
   padding: 10px;
   flex-direction: row;
+}
+
+.dynamic{
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 
 .search{
@@ -24,4 +30,11 @@
 }
 .search-button{
   border-radius: 0px 5px 5px 0px;
+}
+
+@media screen and (max-width: 769px) {
+  .dynamic{
+     position: static !important;
+     
+  }
 }
